[gd_scene load_steps=2 format=3 uid="uid://dqxvhqxqxqxq0"]

[ext_resource type="Script" path="res://game/ui/TurnSystemIndicator.gd" id="1_1"]

[sub_resource type="LabelSettings" id="LabelSettings_1"]
font_size = 14
font_color = Color(0.9, 0.9, 1, 1)

[node name="TurnSystemIndicator" type="Control"]
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -120.0
offset_right = 320.0
offset_bottom = -20.0
script = ExtResource("1_1")

[node name="Background" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.7)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="TurnSystemLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Turn System: Traditional"
label_settings = SubResource("LabelSettings_1")

[node name="CurrentTurnLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Turn: 1"

[node name="CurrentPlayerLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Current Player: Player 1"

[node name="Spacer" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="InstructionsLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Controls: Arrow Keys + Enter | Mouse Click | M/E/C shortcuts | T: Toggle Mouse Mode"
modulate = Color(0.7, 0.7, 0.7, 1)